* Fixed sprite.js stupidly trying to update sprite, while it hasn't loaded yet (canvas). * Enhanced the DevConsole to show the event, instead of "(no stack)" when the exception doesn't have a stack. * Added simple loading screen when loading/resetting level. Fixed reset to work the same way as loading, which fixes bug: Visibility fog not resetting.

--- a/MobileClient/LocalFiles/Assets/Main.css
+++ b/MobileClient/LocalFiles/Assets/Main.css
@@ -72,6 +72,30 @@ html, body
 	white-space: nowrap;
 }
 
+#LoadingScreen
+{
+	background-color: rgba(53, 62, 83, 0.8);
+	position: absolute;
+	top: 0px;
+	bottom: 0px;
+	left: 0px;
+	right: 0px;
+	z-index: 100;
+}
+
+#LoadingScreenContent
+{
+	position: absolute;
+	top: 35%;
+	left: 0px;
+	right: 0px;
+	color: white;
+	text-align: center;
+	
+	font-size: 26px;
+	font-weight: bold;
+}
+
 /* Controls */
 button {
 	
